# VGCN-Phish

./: ExAIS_SMS_SPAM_DATA2.csv  processed_spam2.csv  pyproject.toml
vgcn_bert/: __init__.py  configuration_vgcn_bert.py  main.py  main_new.py  main_text2graphapi.py  main_text2graphapi_New.py  modeling_vgcn_bert - 副本.py  modeling_vgcn_bert.py
vgcn_bert/text2graphapi/: __init__.py  testing.py
vgcn_bert/text2graphapi-0.2.0.dist-info/: RECORD
vgcn_bert/text2graphapi/src/: Cooccurrence.py  Heterogeneous.py  IntegratedSyntacticGraph.py
