[tool.poetry]
name = "vgcn_bert"
version = "0.2.0"
description = "VGCN-BERT: Augmenting BERT with Graph Embedding for Text Classification"
authors = ["Zhibin Lu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.37.2"
torch = "^2.2.0"
einops = "^0.7.0"
numpy = "^1.21.2"
scipy = "^1.7.1"
deepspeed = "^0.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 79
target-version = ['py310']
include = '''
(
    ^/tests/.*\.pyi?$
  | ^/vgcn_bert/.*\.pyi?$
  | ^/snippets/.*\.pyi?$
  | ^/setup[.]py
  | ^/conftest[.]py
)
'''
exclude = '''
(  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | venv
  | __pycache__
)
'''

[tool.pycln]
include = '''
(
    ^/tests/
  | ^/vgcn_bert/
  | ^/snippets/
)
'''
all = true

[tool.isort]
profile = "black"
src_paths = ["vgcn_bert", "tests", "snippets" ]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79


[tool.mypy]
files = '''
(
    ^/vgcn_bert/.*\.pyi?$
    | ^/tests/.*\.pyi?$
    | ^/snippets/.*\.pyi?$
)
'''
python_version = 3.10
[[tool.mypy.overrides]]
module = 'pytest'
ignore_missing_imports = true
